# ropeway-simulation

./: .gitignore  CMakeLists.txt  Config.hpp  FLOWCHART.md  Makefile  README.md  Simulation.hpp  daily_report.txt  main.cpp  ropeway.env  tourist
common/: Config.hpp  RopewayState.hpp  TrailDifficulty.hpp  config.hpp  ropeway_state.hpp  worker_signal.hpp
config/: default.conf  test10_single.conf  test11_capacity_one.conf  test12_all_vip.conf  test13_all_families.conf  test1_capacity.conf  test20_sigint_emergency.conf  test2_children.conf  test2_short.conf  test3_vip.conf  test4_emergency.conf  test5_stress.conf  test6_race.conf  test7_emergency_race.conf  test8_chair_saturation.conf  test9_zero.conf  test_danger.conf  test_no_families.conf  test_quick.conf
core/: Config.hpp  Constants.hpp  Simulation.hpp  main.cpp
docs/: 01_OVERVIEW.md  02_IPC_MECHANISMS.md  03_PROCESSES.md  04_TOURIST_LIFECYCLE.md  05_EMERGENCY_PROTOCOL.md  06_SYNCHRONIZATION.md  07_RUNNING_AND_TESTING.md  08_GLOSSARY.md  ARCHITECTURE.md  BUILDING.md  GLOSSARY.md  INDEX.md  IPC_MECHANISMS.md  PROCESSES.md  SIGNALS.md
entrance/: CashierMessage.hpp  CashierProcess.cpp  Ticket.hpp
enums/: GateType.hpp  TicketName.hpp  TouristType.hpp  TrailDifficulty.hpp
gates/: EntryGate.hpp  RideGate.hpp
include/: config.h  constants.h  ipc.h  ipc_utils.h  logger.h  semaphores.h  shared_state.h  time_sim.h  tourist.h  types.h  worker_emergency.h
include/common/: config.hpp  enums.hpp  gate_type.hpp  pass_type.hpp  ropeway_state.hpp  signal_common.h  station_type.hpp  ticket_type.hpp  tourist_type.h  tourist_type.hpp  trail_difficulty.hpp  worker_signal.hpp
include/core/: Config.h  Constants.h  Flags.h  RopewayState.h  Simulation.h  config.h  logger.h  report.h  time_sim.h
include/entrance/: CashierMessage.h  Ticket.h  TicketName.h
include/gates/: EntryGate.hpp
include/ipc/: IpcManager.h  Semaphore.hpp  cashier_message.hpp  internal.h  ipc.h  messages.h  resources.h  ropeway_system_state.hpp  semaphore_index.hpp  shared_state.h  worker_message.hpp
include/lifecycle/: process_manager.h  process_signals.h  zombie_reaper.h
include/logging/: GatePassageLogger.h  LogMessage.h  Logger.h
include/ropeway/: StationType.h  TrailDifficulty.h
include/stats/: DailyStatistic.h  GatePassage.h  GatePassageLog.h  TouristRideRecord.h
include/structures/: chair.hpp  daily_statistic.hpp  gate_passage.hpp  pass.hpp  tourist.hpp
include/tests/: TestConfig.h  TestConfig.hpp  TestRunner.h  TestValidator.h
ipc/: BoardingQueue.hpp  CashierMessage.hpp  IpcException.hpp  IpcManager.hpp  MessageQueue.hpp  ReportingData.hpp  RopewaySystemState.hpp  Semaphore.hpp  SharedMemory.hpp  WorkerMessage.hpp  boarding_queue.hpp  reporting_data.hpp  ropeway_system_state.hpp  semaphore_index.hpp
logging/: GatePassageLogger.hpp  Logger.hpp
processes/: CashierProcess.cpp  LowerStationWorker.cpp  Orchestrator.hpp  TouristProcess.cpp  UpperStationWorker.cpp  cashier_process.cpp  tourist_process.cpp  worker1_process.cpp  worker2_process.cpp
ropeway/: TrailDifficulty.hpp
src/: cashier.c  config.c  ipc.c  ipc_utils.c  logger.c  lower_worker.c  main.c  report.c  time_server.c  time_sim.c  tourist.c  tourist_generator.c  tourist_main.c  upper_worker.c  worker_emergency.c
stats/: GatePassage.hpp  GatePassageLog.hpp  TouristRideRecord.hpp
structures/: Chair.hpp  DailyStatistic.hpp  GatePassage.hpp  Ticket.hpp  Tourist.hpp  chair.hpp  ticket.hpp  tourist.hpp
tests/: TestConfig.hpp  TestRunner.cpp  TestRunner.hpp  TestValidator.hpp  run_all.sh  run_all_tests.sh  test10_single.sh  test11_capacity_one.sh  test12_all_vip.sh  test13_all_families.sh  test14_sigterm.sh  test15_sigkill_recovery.sh  test16_child_death.sh  test17_pause_resume.sh  test18_rapid_signals.sh  test19_sigalrm_sync.sh  test1_capacity.sh  test20_sigint_emergency.sh  test2_children.sh  test3_vip.sh  test4_emergency.sh  test5_stress.sh  test6_race.sh  test7_emergency_race.sh  test8_chair_saturation.sh  test9_zero.sh  test_children_guardian.sh  test_emergency_stop.sh  test_station_capacity.sh  test_vip_priority.sh
tourist/: Tourist.hpp  TouristProcess.cpp  TouristState.hpp
utils/: ArgumentParser.hpp  EnumStrings.hpp  GatePassageLogger.hpp  Logger.hpp  ProcessSpawner.hpp  SignalHelper.hpp  TimeHelper.hpp
(+89 files in other folders)
